--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "solunes/master": "1.*",
-        "solunes/business": "1.*"
+        "solunes/master": "*",
+        "solunes/business": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
